# FidelityFX-SDK

./: BuildSamplesSolutionDX12.bat  common.cmake
ffx-api/: BuildFfxApiDll.bat
ffx-api/include/ffx_api/: ffx_framegeneration.h
ffx-api/src/: ffx_provider_framegeneration.cpp
framework/cauldron/framework/inc/core/loaders/: textureloader.h
framework/cauldron/framework/src/core/: framework.cpp
framework/cauldron/framework/src/core/loaders/: textureloader.cpp
framework/cauldron/framework/src/render/dx12/: gpuresource_dx12.cpp
samples/: CMakeLists.txt
samples/fsrapi/: CMakeLists.txt  fsrapirendermodule.cpp  fsrapirendermodule.h
samples/fsrvpu/: CMakeLists.txt  fsrvpurendermodule.cpp  fsrvpurendermodule.h
samples/fsrvpu/config/: fsrvpuconfig.json  fsrvpurendermodule.json
samples/vpufsr/: CMakeLists.txt  fsrvpu_ffxapi.h  fsrvpuful_ffxapi.cpp
samples/vpuless/: CMakeLists.txt  vpulessrendermodule.cpp  vpulessrendermodule.h
sdk/: BuildFidelityFXSDKSolutionDX12.bat  BuildFidelityFXSDKSolutionVK.bat  CMakeLists.txt
sdk/include/FidelityFX/host/: ffx_frameinterpolation.h
sdk/src/components/frameinterpolation/: ffx_frameinterpolation.cpp
sdk/src/components/vpufsr/: CMakeLists.txt  ffx_frameinterpolation_vpumod.cpp  vpufulvpuless.cpp
